userService/manifest/mysql.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: mysql
#   namespace: microservices
# spec:
#   selector:
#     app: mysql
#   ports:
#     - protocol: TCP
#       port: 3306
#       targetPort: 3306
