userService/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  selector:
    app: user
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
